--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.8",
     "style-loader": "^0.19.0",
     "webpack-dev-server": "^2.9.3"
