--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "mescroll.js": "^1.2.3",
+    "mockjs": "^1.0.1-beta3",
     "postcss-loader": "^2.0.8",
     "style-loader": "^0.19.0",
+    "vue": "^2.5.2",
     "webpack-dev-server": "^2.9.3"
   },
   "scripts": {
